Spike Function() implementation

--- a/scratchpad.html
+++ b/scratchpad.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Expression.js Scratchpad</h1>
 
-<script src="Expression.js"></script>
+<script src="src/Expression.js"></script>
 </body>
 </html>
